--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ AUTHENTICATION_SVC_HOST = 40.68.219.151
 AUTHENTICATION_SVC_PORT = 8081
 AUDIT_SVC_HOST = 40.68.219.151
 AUDIT_SVC_PORT = 8083
-CREDITCARD_SVC_HOST = 40.68.219.151
-CREDITCARD_SVC_PORT = 808640.68.219.151r
-MORTGAGE_SVC_HOST = 40.68.219.151
-MORTGAGE_SVC_PORT = 8089
+CREDITCARDS_SVC_HOST = 40.68.219.151
+CREDITCARDS_SVC_PORT = 808640.68.219.151r
+MORTGAGES_SVC_HOST = 40.68.219.151
+MORTGAGES_SVC_PORT = 8089
 
 LOG_API = http://40.68.219.151:8083/log/bulk
 
