--- a/.env
+++ b/.env
@@ -1,16 +1,12 @@
 NODE_ENV = production
-     
-BASE_URL=http://localhost:8000/
-MONGODB_URI = mongodb://
 
-AUTHENTICATION_SVC_HOST = 40.68.219.151
-AUTHENTICATION_SVC_PORT = 8081
 AUDIT_SVC_HOST = 40.68.219.151
 AUDIT_SVC_PORT = 8083
-CREDITCARDS_SVC_HOST = 40.68.219.151
-CREDITCARDS_SVC_PORT = 808640.68.219.151r
+CREDITCARDS_SVC_HOST = 52.50.41.159
+CREDITCARDS_SVC_PORT = 8084
 MORTGAGES_SVC_HOST = 40.68.219.151
 MORTGAGES_SVC_PORT = 8089
 
 LOG_API = http://40.68.219.151:8083/log/bulk
 
+http://52.50.41.159:8084/api/creditcard/get?id=hhaytonci
