env variable missing for customer

--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ CREDITCARDS_SVC_HOST = 52.50.41.159
 CREDITCARDS_SVC_PORT = 8084
 MORTGAGES_SVC_HOST = 52.50.41.159
 MORTGAGES_SVC_PORT = 8086
+CUSTOMERS_SVC_HOST = 52.50.41.159
+CUSTOMERS_SVC_PORT = 8085
 
